Watched video and finished

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
   </head>
 
   <body>
+    <h1>Heading!</h1>
+    <h1 id="second">Another Heading!</h1>
+
+
+    <img src="PacMan.png" alt="Image of PacMan">
     <script src="sketch.js"></script>
   </body>
 
